feat: add date in Workout data structure for future features